--- a/01a-avito-downloader-flat.ipynb
+++ b/01a-avito-downloader-flat.ipynb
@@ -116,90 +116,89 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-11-04 17:05:46 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-11-04 17:05:46 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-11-04 17:05:49 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-11-04 17:05:49 | AvitoParser: init\n",
-      "[INFO    ] 2022-11-04 17:05:53 | AvitoParser: 73 pages for read\n",
-      "[INFO    ] 2022-11-04 17:05:53 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-11-04 17:05:55 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-11-04 17:05:58 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-11-04 17:06:00 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-11-04 17:06:03 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-11-04 17:07:03 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-11-04 17:07:08 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-11-04 17:07:11 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-11-04 17:07:14 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-11-04 17:07:16 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-11-04 17:07:19 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-11-04 17:07:22 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-11-04 17:07:26 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-11-04 17:07:29 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-11-04 17:07:32 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-11-04 17:07:35 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-11-04 17:07:38 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-11-04 17:07:41 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-11-04 17:07:43 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-11-04 17:07:45 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-11-04 17:07:48 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-11-04 17:07:52 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-11-04 17:07:56 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-11-04 17:07:59 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-11-04 17:08:01 | AdsListParser: read page 24\n",
-      "[INFO    ] 2022-11-04 17:08:04 | AdsListParser: read page 25\n",
-      "[INFO    ] 2022-11-04 17:08:06 | AdsListParser: read page 26\n",
-      "[INFO    ] 2022-11-04 17:08:12 | AdsListParser: read page 27\n",
-      "[INFO    ] 2022-11-04 17:08:14 | AdsListParser: read page 28\n",
-      "[INFO    ] 2022-11-04 17:08:16 | AdsListParser: read page 29\n",
-      "[INFO    ] 2022-11-04 17:08:20 | AdsListParser: read page 30\n",
-      "[INFO    ] 2022-11-04 17:08:23 | AdsListParser: read page 31\n",
-      "[INFO    ] 2022-11-04 17:08:25 | AdsListParser: read page 32\n",
-      "[INFO    ] 2022-11-04 17:08:28 | AdsListParser: read page 33\n",
-      "[INFO    ] 2022-11-04 17:08:30 | AdsListParser: read page 34\n",
-      "[INFO    ] 2022-11-04 17:08:33 | AdsListParser: read page 35\n",
-      "[INFO    ] 2022-11-04 17:08:36 | AdsListParser: read page 36\n",
-      "[INFO    ] 2022-11-04 17:08:39 | AdsListParser: read page 37\n",
-      "[INFO    ] 2022-11-04 17:08:44 | AdsListParser: read page 38\n",
-      "[INFO    ] 2022-11-04 17:08:47 | AdsListParser: read page 39\n",
-      "[INFO    ] 2022-11-04 17:08:49 | AdsListParser: read page 40\n",
-      "[INFO    ] 2022-11-04 17:08:52 | AdsListParser: read page 41\n",
-      "[INFO    ] 2022-11-04 17:08:55 | AdsListParser: read page 42\n",
-      "[INFO    ] 2022-11-04 17:08:59 | AdsListParser: read page 43\n",
-      "[INFO    ] 2022-11-04 17:09:02 | AdsListParser: read page 44\n",
-      "[INFO    ] 2022-11-04 17:09:10 | AdsListParser: read page 45\n",
-      "[INFO    ] 2022-11-04 17:09:13 | AdsListParser: read page 46\n",
-      "[INFO    ] 2022-11-04 17:09:15 | AdsListParser: read page 47\n",
-      "[INFO    ] 2022-11-04 17:09:17 | AdsListParser: read page 48\n",
-      "[INFO    ] 2022-11-04 17:09:20 | AdsListParser: read page 49\n",
-      "[INFO    ] 2022-11-04 17:09:22 | AdsListParser: read page 50\n",
-      "[INFO    ] 2022-11-04 17:09:25 | AdsListParser: read page 51\n",
-      "[INFO    ] 2022-11-04 17:09:28 | AdsListParser: read page 52\n",
-      "[INFO    ] 2022-11-04 17:09:31 | AdsListParser: read page 53\n",
-      "[INFO    ] 2022-11-04 17:09:34 | AdsListParser: read page 54\n",
-      "[INFO    ] 2022-11-04 17:09:38 | AdsListParser: read page 55\n",
-      "[INFO    ] 2022-11-04 17:09:41 | AdsListParser: read page 56\n",
-      "[INFO    ] 2022-11-04 17:09:44 | AdsListParser: read page 57\n",
-      "[INFO    ] 2022-11-04 17:09:46 | AdsListParser: read page 58\n",
-      "[INFO    ] 2022-11-04 17:09:48 | AdsListParser: read page 59\n",
-      "[INFO    ] 2022-11-04 17:09:52 | AdsListParser: read page 60\n",
-      "[INFO    ] 2022-11-04 17:10:52 | AdsListParser: read page 61\n",
-      "[INFO    ] 2022-11-04 17:10:55 | AdsListParser: read page 62\n",
-      "[INFO    ] 2022-11-04 17:10:57 | AdsListParser: read page 63\n",
-      "[INFO    ] 2022-11-04 17:11:01 | AdsListParser: read page 64\n",
-      "[INFO    ] 2022-11-04 17:11:05 | AdsListParser: read page 65\n",
-      "[INFO    ] 2022-11-04 17:11:08 | AdsListParser: read page 66\n",
-      "[INFO    ] 2022-11-04 17:11:10 | AdsListParser: read page 67\n",
-      "[INFO    ] 2022-11-04 17:11:13 | AdsListParser: read page 68\n",
-      "[INFO    ] 2022-11-04 17:11:16 | AdsListParser: read page 69\n",
-      "[INFO    ] 2022-11-04 17:11:19 | AdsListParser: read page 70\n",
-      "[INFO    ] 2022-11-04 17:11:22 | AdsListParser: read page 71\n",
-      "[INFO    ] 2022-11-04 17:11:26 | AdsListParser: read page 72\n",
-      "[INFO    ] 2022-11-04 17:11:28 | AdsListParser: read page 73\n",
-      "[INFO    ] 2022-11-04 17:11:28 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-11-04 17:11:29 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "3526\n",
-      "CPU times: user 15 s, sys: 726 ms, total: 15.8 s\n",
-      "Wall time: 5min 43s\n"
+      "[INFO    ] 2022-11-07 10:37:33 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-11-07 10:37:33 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-11-07 10:37:37 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-11-07 10:37:37 | AvitoParser: init\n",
+      "[INFO    ] 2022-11-07 10:38:40 | AvitoParser: 72 pages for read\n",
+      "[INFO    ] 2022-11-07 10:38:40 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-11-07 10:38:43 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-11-07 10:38:47 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-11-07 10:38:50 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-11-07 10:38:52 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-11-07 10:38:57 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-11-07 10:39:00 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-11-07 10:39:03 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-11-07 10:39:09 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-11-07 10:40:15 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-11-07 10:40:19 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-11-07 10:40:21 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-11-07 10:40:23 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-11-07 10:40:26 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-11-07 10:40:30 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-11-07 10:40:33 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-11-07 10:40:35 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-11-07 10:40:38 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-11-07 10:40:42 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-11-07 10:40:45 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-11-07 10:40:49 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-11-07 10:40:51 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-11-07 10:40:55 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-11-07 10:40:59 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-11-07 10:41:02 | AdsListParser: read page 24\n",
+      "[INFO    ] 2022-11-07 10:41:07 | AdsListParser: read page 25\n",
+      "[INFO    ] 2022-11-07 10:41:11 | AdsListParser: read page 26\n",
+      "[INFO    ] 2022-11-07 10:41:14 | AdsListParser: read page 27\n",
+      "[INFO    ] 2022-11-07 10:41:16 | AdsListParser: read page 28\n",
+      "[INFO    ] 2022-11-07 10:41:19 | AdsListParser: read page 29\n",
+      "[INFO    ] 2022-11-07 10:41:22 | AdsListParser: read page 30\n",
+      "[INFO    ] 2022-11-07 10:41:26 | AdsListParser: read page 31\n",
+      "[INFO    ] 2022-11-07 10:41:31 | AdsListParser: read page 32\n",
+      "[INFO    ] 2022-11-07 10:41:33 | AdsListParser: read page 33\n",
+      "[INFO    ] 2022-11-07 10:41:36 | AdsListParser: read page 34\n",
+      "[INFO    ] 2022-11-07 10:41:39 | AdsListParser: read page 35\n",
+      "[INFO    ] 2022-11-07 10:41:42 | AdsListParser: read page 36\n",
+      "[INFO    ] 2022-11-07 10:41:44 | AdsListParser: read page 37\n",
+      "[INFO    ] 2022-11-07 10:41:47 | AdsListParser: read page 38\n",
+      "[INFO    ] 2022-11-07 10:41:49 | AdsListParser: read page 39\n",
+      "[INFO    ] 2022-11-07 10:41:54 | AdsListParser: read page 40\n",
+      "[INFO    ] 2022-11-07 10:41:56 | AdsListParser: read page 41\n",
+      "[INFO    ] 2022-11-07 10:41:59 | AdsListParser: read page 42\n",
+      "[INFO    ] 2022-11-07 10:42:01 | AdsListParser: read page 43\n",
+      "[INFO    ] 2022-11-07 10:42:03 | AdsListParser: read page 44\n",
+      "[INFO    ] 2022-11-07 10:42:08 | AdsListParser: read page 45\n",
+      "[INFO    ] 2022-11-07 10:42:10 | AdsListParser: read page 46\n",
+      "[INFO    ] 2022-11-07 10:42:13 | AdsListParser: read page 47\n",
+      "[INFO    ] 2022-11-07 10:42:16 | AdsListParser: read page 48\n",
+      "[INFO    ] 2022-11-07 10:42:19 | AdsListParser: read page 49\n",
+      "[INFO    ] 2022-11-07 10:42:21 | AdsListParser: read page 50\n",
+      "[INFO    ] 2022-11-07 10:42:23 | AdsListParser: read page 51\n",
+      "[INFO    ] 2022-11-07 10:42:28 | AdsListParser: read page 52\n",
+      "[INFO    ] 2022-11-07 10:42:30 | AdsListParser: read page 53\n",
+      "[INFO    ] 2022-11-07 10:42:33 | AdsListParser: read page 54\n",
+      "[INFO    ] 2022-11-07 10:42:36 | AdsListParser: read page 55\n",
+      "[INFO    ] 2022-11-07 10:42:38 | AdsListParser: read page 56\n",
+      "[INFO    ] 2022-11-07 10:42:40 | AdsListParser: read page 57\n",
+      "[INFO    ] 2022-11-07 10:42:45 | AdsListParser: read page 58\n",
+      "[INFO    ] 2022-11-07 10:42:48 | AdsListParser: read page 59\n",
+      "[INFO    ] 2022-11-07 10:42:51 | AdsListParser: read page 60\n",
+      "[INFO    ] 2022-11-07 10:42:54 | AdsListParser: read page 61\n",
+      "[INFO    ] 2022-11-07 10:42:58 | AdsListParser: read page 62\n",
+      "[INFO    ] 2022-11-07 10:43:01 | AdsListParser: read page 63\n",
+      "[INFO    ] 2022-11-07 10:43:03 | AdsListParser: read page 64\n",
+      "[INFO    ] 2022-11-07 10:43:06 | AdsListParser: read page 65\n",
+      "[INFO    ] 2022-11-07 10:43:08 | AdsListParser: read page 66\n",
+      "[INFO    ] 2022-11-07 10:43:13 | AdsListParser: read page 67\n",
+      "[INFO    ] 2022-11-07 10:43:16 | AdsListParser: read page 68\n",
+      "[INFO    ] 2022-11-07 10:43:18 | AdsListParser: read page 69\n",
+      "[INFO    ] 2022-11-07 10:43:22 | AdsListParser: read page 70\n",
+      "[INFO    ] 2022-11-07 10:43:24 | AdsListParser: read page 71\n",
+      "[INFO    ] 2022-11-07 10:43:25 | AdsListParser: read page 72\n",
+      "[INFO    ] 2022-11-07 10:43:26 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-11-07 10:43:26 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "3572\n",
+      "CPU times: user 14.9 s, sys: 1.36 s, total: 16.3 s\n",
+      "Wall time: 5min 52s\n"
      ]
     }
    ],
@@ -227,8 +226,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3526\n",
-      "3144\n"
+      "3572\n",
+      "3257\n"
      ]
     }
    ],
@@ -300,27 +299,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2344</th>\n",
-       "      <td>2481726125</td>\n",
-       "      <td>Объявление «1-к. квартира, 44 м², 3/7 эт.» 11 фотографий</td>\n",
-       "      <td>6700000</td>\n",
+       "      <th>2897</th>\n",
+       "      <td>2568500563</td>\n",
+       "      <td>Объявление «2-к. квартира, 51,9 м², 3/5 эт.» 11 фотографий</td>\n",
+       "      <td>8000000</td>\n",
        "      <td></td>\n",
-       "      <td>ул. Вакуленчука, 28</td>\n",
-       "      <td>Продается 1-комнатная квартира от застройщика без комиссии. Дом сдан в эксплуатацию. В доме есть вход с двух сторон. Рядом остановка «Студгородок», торговые центры «Лаванда», «Муссон», «Ниагара». Тихий двор с детскими площадками и тренажерами. Рядом парк.</td>\n",
-       "      <td>54</td>\n",
-       "      <td>2022-11-04 17:11:28.840961</td>\n",
+       "      <td>ул. Репина, 18</td>\n",
+       "      <td>Объект №2054. \\n\\nХотите жить в самом сердце перспективного района с шаговой доступностью ко всей необходимой инфраструктуре для комфортной жизни? \\n\\nТогда трехкомнатная крупногабаритная квартира на Репина — для Вас! \\n\\nОсобенности Вашей новой квартиры: \\n— Кос</td>\n",
+       "      <td>64</td>\n",
+       "      <td>2022-11-07 10:43:26.010265</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2533</th>\n",
-       "      <td>2523569420</td>\n",
-       "      <td>Объявление «1-к. квартира, 31 м², 4/5 эт.» с фотографией</td>\n",
-       "      <td>4600000</td>\n",
+       "      <th>712</th>\n",
+       "      <td>2333405776</td>\n",
+       "      <td>Объявление «1-к. квартира, 31 м², 1/5 эт.» 11 фотографий</td>\n",
+       "      <td>4500000</td>\n",
        "      <td></td>\n",
-       "      <td>пос. городского типа Кача, ул. Авиаторов, 17</td>\n",
-       "      <td>Продаётся однакомнатная квартира. \\nТребует капитального ремонта. При необходимости, окажем услуги по отделочным работам под ключ. Просмотр в любое время по предварительной договорённости.</td>\n",
-       "      <td>58</td>\n",
-       "      <td>2022-11-04 17:11:28.840961</td>\n",
+       "      <td>ул. Горпищенко, 43</td>\n",
+       "      <td>Продам однокомнатную квартиру на первом этаже. Хорошее жилое состояние. Без балкона. Отличная инфраструктура. Прямая продажа. Торг.</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2022-11-07 10:43:26.010265</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -328,21 +327,21 @@
        "</div>"
       ],
       "text/plain": [
-       "        avito_id                                                     title  \\\n",
-       "2344  2481726125  Объявление «1-к. квартира, 44 м², 3/7 эт.» 11 фотографий   \n",
-       "2533  2523569420  Объявление «1-к. квартира, 31 м², 4/5 эт.» с фотографией   \n",
+       "        avito_id                                                       title  \\\n",
+       "2897  2568500563  Объявление «2-к. квартира, 51,9 м², 3/5 эт.» 11 фотографий   \n",
+       "712   2333405776    Объявление «1-к. квартира, 31 м², 1/5 эт.» 11 фотографий   \n",
        "\n",
-       "        price obj_name                                           adr  \\\n",
-       "2344  6700000                                    ул. Вакуленчука, 28   \n",
-       "2533  4600000           пос. городского типа Кача, ул. Авиаторов, 17   \n",
+       "        price obj_name                 adr  \\\n",
+       "2897  8000000               ул. Репина, 18   \n",
+       "712   4500000           ул. Горпищенко, 43   \n",
        "\n",
-       "                                                                                                                                                                                                                                                           description  \\\n",
-       "2344  Продается 1-комнатная квартира от застройщика без комиссии. Дом сдан в эксплуатацию. В доме есть вход с двух сторон. Рядом остановка «Студгородок», торговые центры «Лаванда», «Муссон», «Ниагара». Тихий двор с детскими площадками и тренажерами. Рядом парк.    \n",
-       "2533                                                                      Продаётся однакомнатная квартира. \\nТребует капитального ремонта. При необходимости, окажем услуги по отделочным работам под ключ. Просмотр в любое время по предварительной договорённости.   \n",
+       "                                                                                                                                                                                                                                                                  description  \\\n",
+       "2897  Объект №2054. \\n\\nХотите жить в самом сердце перспективного района с шаговой доступностью ко всей необходимой инфраструктуре для комфортной жизни? \\n\\nТогда трехкомнатная крупногабаритная квартира на Репина — для Вас! \\n\\nОсобенности Вашей новой квартиры: \\n— Кос   \n",
+       "712                                                                                                                                       Продам однокомнатную квартиру на первом этаже. Хорошее жилое состояние. Без балкона. Отличная инфраструктура. Прямая продажа. Торг.   \n",
        "\n",
        "      page                         ts       place  \n",
-       "2344    54 2022-11-04 17:11:28.840961  sevastopol  \n",
-       "2533    58 2022-11-04 17:11:28.840961  sevastopol  "
+       "2897    64 2022-11-07 10:43:26.010265  sevastopol  \n",
+       "712     16 2022-11-07 10:43:26.010265  sevastopol  "
       ]
      },
      "execution_count": 10,
