--- a/01c-avito-downloader-house.ipynb
+++ b/01c-avito-downloader-house.ipynb
@@ -92,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d437eab9",
+   "execution_count": null,
+   "id": "e1d4e472",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,13 +102,20 @@
     "base_url = 'https://www.avito.ru/'\n",
     "# avito_path = 'sevastopol/kvartiry/prodam'\n",
     "\n",
+    "raw_data_path = 'data/raw/house/avito' # каталог с файлами объявлений"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d437eab9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "place = 'sevastopol'\n",
     "# place = 'bahchisaray'\n",
     "# place = 'sudak'\n",
-    "\n",
-    "avito_path = place+'/doma_dachi_kottedzhi/prodam'\n",
-    "\n",
-    "raw_data_path = 'data/raw/house/avito' # каталог с файлами объявлений"
+    "avito_path = place+'/doma_dachi_kottedzhi/prodam'"
    ]
   },
   {
@@ -121,62 +128,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-11-04 17:13:04 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-11-04 17:13:04 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-11-04 17:13:06 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-11-04 17:13:06 | AvitoParser: init\n",
-      "[INFO    ] 2022-11-04 17:13:13 | AvitoParser: 45 pages for read\n",
-      "[INFO    ] 2022-11-04 17:13:13 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-11-04 17:13:16 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-11-04 17:13:22 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-11-04 17:13:25 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-11-04 17:13:28 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-11-04 17:13:31 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-11-04 17:13:35 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-11-04 17:13:38 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-11-04 17:13:42 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-11-04 17:13:47 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-11-04 17:13:51 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-11-04 17:13:55 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-11-04 17:13:58 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-11-04 17:14:01 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-11-04 17:14:04 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-11-04 17:14:09 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-11-04 17:14:12 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-11-04 17:14:15 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-11-04 17:14:19 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-11-04 17:14:23 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-11-04 17:14:26 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-11-04 17:14:32 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-11-04 17:14:35 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-11-04 17:14:38 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-11-04 17:14:44 | AdsListParser: read page 24\n",
-      "[INFO    ] 2022-11-04 17:14:48 | AdsListParser: read page 25\n",
-      "[INFO    ] 2022-11-04 17:14:51 | AdsListParser: read page 26\n",
-      "[INFO    ] 2022-11-04 17:14:56 | AdsListParser: read page 27\n",
-      "[INFO    ] 2022-11-04 17:14:59 | AdsListParser: read page 28\n",
-      "[INFO    ] 2022-11-04 17:15:02 | AdsListParser: read page 29\n",
-      "[INFO    ] 2022-11-04 17:15:04 | AdsListParser: read page 30\n",
-      "[INFO    ] 2022-11-04 17:15:06 | AdsListParser: read page 31\n",
-      "[INFO    ] 2022-11-04 17:15:09 | AdsListParser: read page 32\n",
-      "[INFO    ] 2022-11-04 17:15:11 | AdsListParser: read page 33\n",
-      "[INFO    ] 2022-11-04 17:15:13 | AdsListParser: read page 34\n",
-      "[INFO    ] 2022-11-04 17:15:15 | AdsListParser: read page 35\n",
-      "[INFO    ] 2022-11-04 17:15:18 | AdsListParser: read page 36\n",
-      "[INFO    ] 2022-11-04 17:15:21 | AdsListParser: read page 37\n",
-      "[INFO    ] 2022-11-04 17:15:26 | AdsListParser: read page 38\n",
-      "[INFO    ] 2022-11-04 17:15:29 | AdsListParser: read page 39\n",
-      "[INFO    ] 2022-11-04 17:15:31 | AdsListParser: read page 40\n",
-      "[INFO    ] 2022-11-04 17:15:35 | AdsListParser: read page 41\n",
-      "[INFO    ] 2022-11-04 17:15:38 | AdsListParser: read page 42\n",
-      "[INFO    ] 2022-11-04 17:15:40 | AdsListParser: read page 43\n",
-      "[INFO    ] 2022-11-04 17:15:42 | AdsListParser: read page 44\n",
-      "[INFO    ] 2022-11-04 17:15:44 | AdsListParser: read page 45\n",
-      "[INFO    ] 2022-11-04 17:15:44 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-11-04 17:15:45 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "2234\n",
-      "CPU times: user 9.74 s, sys: 502 ms, total: 10.2 s\n",
-      "Wall time: 2min 41s\n"
+      "[INFO    ] 2022-11-07 12:08:12 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-11-07 12:08:12 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-11-07 12:08:14 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-11-07 12:08:14 | AvitoParser: init\n",
+      "[INFO    ] 2022-11-07 12:08:18 | AvitoParser: 3 pages for read\n",
+      "[INFO    ] 2022-11-07 12:08:18 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-11-07 12:08:20 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-11-07 12:08:22 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-11-07 12:08:24 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-11-07 12:08:24 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-11-07 12:08:25 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "103\n",
+      "CPU times: user 1.3 s, sys: 91.8 ms, total: 1.39 s\n",
+      "Wall time: 12.7 s\n"
      ]
     }
    ],
@@ -204,8 +169,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2234\n",
-      "2146\n"
+      "103\n",
+      "103\n"
      ]
     }
    ],
@@ -254,47 +219,47 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>792</th>\n",
-       "      <td>2482038351</td>\n",
-       "      <td>Объявление «Дом 129,6 м² на участке 4,1 сот.» 19 фотографий</td>\n",
-       "      <td>10800000</td>\n",
+       "      <th>59</th>\n",
+       "      <td>2447721520</td>\n",
+       "      <td>Объявление «Дом 368 м² на участке 5 сот.» 7 фотографий</td>\n",
+       "      <td>16500000</td>\n",
        "      <td></td>\n",
-       "      <td>ТСН Союз, 49</td>\n",
-       "      <td>Арт. 31425154. \\n\\nДом расположен в тихом и уютном месте. Не далеко от дома есть детская игровая площадка, огороженная. \\n\\nВсе коммуникации подключены: электричество-3 фазы, вода- городская круглогодичная, канализация-септик. \\n\\nХарактеристики: \\n\\nОбщая площадь</td>\n",
-       "      <td>17</td>\n",
-       "      <td>2022-11-04 17:15:44.834740</td>\n",
+       "      <td>Сурожская ул., 41</td>\n",
+       "      <td>Продаётся в г. Судаке, в районе Аквапарка 3х-этажный жилой дом-пансионат общей площадью 368м2, расположенный на земельном участке 5 соток, целевое использование Индивидуальное жилищное строительство. Процент готовности по техпаспотру Бти составляет 67%. Ма</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-11-07 12:08:24.611702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1432</th>\n",
-       "      <td>1605601891</td>\n",
-       "      <td>Объявление «Дом 300 м² на участке 4 сот.» 13 фотографий</td>\n",
-       "      <td>22990000</td>\n",
+       "      <th>101</th>\n",
+       "      <td>1762922583</td>\n",
+       "      <td>Объявление «Дом 59,1 м² на участке 6 сот.» с фотографией</td>\n",
+       "      <td>4000000</td>\n",
        "      <td></td>\n",
-       "      <td>мыс Фиолент</td>\n",
-       "      <td>Римская вилла у Черного моря.\\n\\nПродается 3х этажная вилла площадью 300 кв м в римском стиле в элитном котеджном поселке на Фиоленте в районе Автобата. 1 этаж- кухня-столовая 30 кв м, жилая комната, санузел, оснащенный современной сантехникой, джакузи. 2 эт</td>\n",
-       "      <td>30</td>\n",
-       "      <td>2022-11-04 17:15:44.834740</td>\n",
+       "      <td>с. Богатовка, Виноградная ул.</td>\n",
+       "      <td>Продам дом в пригороде г. Судака, \\nот дома до моря 6 км, красивый горный пейзаж, вода подаётся с родника, газ на улице есть, но в дом не заведён. Более детально по телефону или ватсапп, фото, видео так же могу выслать.</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022-11-07 12:08:24.611702</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        avito_id                                                        title  \\\n",
-       "792   2482038351  Объявление «Дом 129,6 м² на участке 4,1 сот.» 19 фотографий   \n",
-       "1432  1605601891      Объявление «Дом 300 м² на участке 4 сот.» 13 фотографий   \n",
+       "       avito_id                                                     title  \\\n",
+       "59   2447721520    Объявление «Дом 368 м² на участке 5 сот.» 7 фотографий   \n",
+       "101  1762922583  Объявление «Дом 59,1 м² на участке 6 сот.» с фотографией   \n",
        "\n",
-       "         price obj_name           adr  \\\n",
-       "792   10800000           ТСН Союз, 49   \n",
-       "1432  22990000            мыс Фиолент   \n",
+       "        price obj_name                            adr  \\\n",
+       "59   16500000                       Сурожская ул., 41   \n",
+       "101   4000000           с. Богатовка, Виноградная ул.   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                   description  \\\n",
-       "792   Арт. 31425154. \\n\\nДом расположен в тихом и уютном месте. Не далеко от дома есть детская игровая площадка, огороженная. \\n\\nВсе коммуникации подключены: электричество-3 фазы, вода- городская круглогодичная, канализация-септик. \\n\\nХарактеристики: \\n\\nОбщая площадь   \n",
-       "1432        Римская вилла у Черного моря.\\n\\nПродается 3х этажная вилла площадью 300 кв м в римском стиле в элитном котеджном поселке на Фиоленте в районе Автобата. 1 этаж- кухня-столовая 30 кв м, жилая комната, санузел, оснащенный современной сантехникой, джакузи. 2 эт   \n",
+       "                                                                                                                                                                                                                                                          description  \\\n",
+       "59   Продаётся в г. Судаке, в районе Аквапарка 3х-этажный жилой дом-пансионат общей площадью 368м2, расположенный на земельном участке 5 соток, целевое использование Индивидуальное жилищное строительство. Процент готовности по техпаспотру Бти составляет 67%. Ма   \n",
+       "101                                       Продам дом в пригороде г. Судака, \\nот дома до моря 6 км, красивый горный пейзаж, вода подаётся с родника, газ на улице есть, но в дом не заведён. Более детально по телефону или ватсапп, фото, видео так же могу выслать.   \n",
        "\n",
-       "      page                         ts  \n",
-       "792     17 2022-11-04 17:15:44.834740  \n",
-       "1432    30 2022-11-04 17:15:44.834740  "
+       "     page                         ts  \n",
+       "59      2 2022-11-07 12:08:24.611702  \n",
+       "101     3 2022-11-07 12:08:24.611702  "
       ]
      },
      "execution_count": 8,
@@ -323,6 +288,110 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ts = dtm.now().strftime('%Y-%m-%d_%H-%M')\n",
+    "assert len(df)>0\n",
+    "df.to_excel(f'{raw_data_path}/avito_{ts}_raw_{place}.xlsx',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdb9e4bd",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a3aff9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# place = 'sevastopol'\n",
+    "place = 'bahchisaray'\n",
+    "# place = 'sudak'\n",
+    "avito_path = place+'/doma_dachi_kottedzhi/prodam'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0828e414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df,html = AvitoParserRealty(\n",
+    "        base_url=base_url+'/'+avito_path,\n",
+    "        driver=DownloaderSeleniumFirefox(profile_path)\n",
+    "    ).load(req_param='',keep_html=True)\n",
+    "\n",
+    "print(len(df))\n",
+    "df.sample(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa6cf989",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df['place'] = place\n",
+    "ts = dtm.now().strftime('%Y-%m-%d_%H-%M')\n",
+    "assert len(df)>0\n",
+    "df.to_excel(f'{raw_data_path}/avito_{ts}_raw_{place}.xlsx',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb8a6e24",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fafeda38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# place = 'sevastopol'\n",
+    "# place = 'bahchisaray'\n",
+    "place = 'sudak'\n",
+    "avito_path = place+'/doma_dachi_kottedzhi/prodam'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ea62e56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df,html = AvitoParserRealty(\n",
+    "        base_url=base_url+'/'+avito_path,\n",
+    "        driver=DownloaderSeleniumFirefox(profile_path)\n",
+    "    ).load(req_param='',keep_html=True)\n",
+    "\n",
+    "print(len(df))\n",
+    "df.sample(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "348cab00",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df['place'] = place\n",
     "ts = dtm.now().strftime('%Y-%m-%d_%H-%M')\n",
     "assert len(df)>0\n",
     "df.to_excel(f'{raw_data_path}/avito_{ts}_raw_{place}.xlsx',index=False)"
