--- a/01a-avito-downloader-flat.ipynb
+++ b/01a-avito-downloader-flat.ipynb
@@ -116,89 +116,89 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-11-07 10:37:33 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-11-07 10:37:33 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-11-07 10:37:37 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-11-07 10:37:37 | AvitoParser: init\n",
-      "[INFO    ] 2022-11-07 10:38:40 | AvitoParser: 72 pages for read\n",
-      "[INFO    ] 2022-11-07 10:38:40 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-11-07 10:38:43 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-11-07 10:38:47 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-11-07 10:38:50 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-11-07 10:38:52 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-11-07 10:38:57 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-11-07 10:39:00 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-11-07 10:39:03 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-11-07 10:39:09 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-11-07 10:40:15 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-11-07 10:40:19 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-11-07 10:40:21 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-11-07 10:40:23 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-11-07 10:40:26 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-11-07 10:40:30 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-11-07 10:40:33 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-11-07 10:40:35 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-11-07 10:40:38 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-11-07 10:40:42 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-11-07 10:40:45 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-11-07 10:40:49 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-11-07 10:40:51 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-11-07 10:40:55 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-11-07 10:40:59 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-11-07 10:41:02 | AdsListParser: read page 24\n",
-      "[INFO    ] 2022-11-07 10:41:07 | AdsListParser: read page 25\n",
-      "[INFO    ] 2022-11-07 10:41:11 | AdsListParser: read page 26\n",
-      "[INFO    ] 2022-11-07 10:41:14 | AdsListParser: read page 27\n",
-      "[INFO    ] 2022-11-07 10:41:16 | AdsListParser: read page 28\n",
-      "[INFO    ] 2022-11-07 10:41:19 | AdsListParser: read page 29\n",
-      "[INFO    ] 2022-11-07 10:41:22 | AdsListParser: read page 30\n",
-      "[INFO    ] 2022-11-07 10:41:26 | AdsListParser: read page 31\n",
-      "[INFO    ] 2022-11-07 10:41:31 | AdsListParser: read page 32\n",
-      "[INFO    ] 2022-11-07 10:41:33 | AdsListParser: read page 33\n",
-      "[INFO    ] 2022-11-07 10:41:36 | AdsListParser: read page 34\n",
-      "[INFO    ] 2022-11-07 10:41:39 | AdsListParser: read page 35\n",
-      "[INFO    ] 2022-11-07 10:41:42 | AdsListParser: read page 36\n",
-      "[INFO    ] 2022-11-07 10:41:44 | AdsListParser: read page 37\n",
-      "[INFO    ] 2022-11-07 10:41:47 | AdsListParser: read page 38\n",
-      "[INFO    ] 2022-11-07 10:41:49 | AdsListParser: read page 39\n",
-      "[INFO    ] 2022-11-07 10:41:54 | AdsListParser: read page 40\n",
-      "[INFO    ] 2022-11-07 10:41:56 | AdsListParser: read page 41\n",
-      "[INFO    ] 2022-11-07 10:41:59 | AdsListParser: read page 42\n",
-      "[INFO    ] 2022-11-07 10:42:01 | AdsListParser: read page 43\n",
-      "[INFO    ] 2022-11-07 10:42:03 | AdsListParser: read page 44\n",
-      "[INFO    ] 2022-11-07 10:42:08 | AdsListParser: read page 45\n",
-      "[INFO    ] 2022-11-07 10:42:10 | AdsListParser: read page 46\n",
-      "[INFO    ] 2022-11-07 10:42:13 | AdsListParser: read page 47\n",
-      "[INFO    ] 2022-11-07 10:42:16 | AdsListParser: read page 48\n",
-      "[INFO    ] 2022-11-07 10:42:19 | AdsListParser: read page 49\n",
-      "[INFO    ] 2022-11-07 10:42:21 | AdsListParser: read page 50\n",
-      "[INFO    ] 2022-11-07 10:42:23 | AdsListParser: read page 51\n",
-      "[INFO    ] 2022-11-07 10:42:28 | AdsListParser: read page 52\n",
-      "[INFO    ] 2022-11-07 10:42:30 | AdsListParser: read page 53\n",
-      "[INFO    ] 2022-11-07 10:42:33 | AdsListParser: read page 54\n",
-      "[INFO    ] 2022-11-07 10:42:36 | AdsListParser: read page 55\n",
-      "[INFO    ] 2022-11-07 10:42:38 | AdsListParser: read page 56\n",
-      "[INFO    ] 2022-11-07 10:42:40 | AdsListParser: read page 57\n",
-      "[INFO    ] 2022-11-07 10:42:45 | AdsListParser: read page 58\n",
-      "[INFO    ] 2022-11-07 10:42:48 | AdsListParser: read page 59\n",
-      "[INFO    ] 2022-11-07 10:42:51 | AdsListParser: read page 60\n",
-      "[INFO    ] 2022-11-07 10:42:54 | AdsListParser: read page 61\n",
-      "[INFO    ] 2022-11-07 10:42:58 | AdsListParser: read page 62\n",
-      "[INFO    ] 2022-11-07 10:43:01 | AdsListParser: read page 63\n",
-      "[INFO    ] 2022-11-07 10:43:03 | AdsListParser: read page 64\n",
-      "[INFO    ] 2022-11-07 10:43:06 | AdsListParser: read page 65\n",
-      "[INFO    ] 2022-11-07 10:43:08 | AdsListParser: read page 66\n",
-      "[INFO    ] 2022-11-07 10:43:13 | AdsListParser: read page 67\n",
-      "[INFO    ] 2022-11-07 10:43:16 | AdsListParser: read page 68\n",
-      "[INFO    ] 2022-11-07 10:43:18 | AdsListParser: read page 69\n",
-      "[INFO    ] 2022-11-07 10:43:22 | AdsListParser: read page 70\n",
-      "[INFO    ] 2022-11-07 10:43:24 | AdsListParser: read page 71\n",
-      "[INFO    ] 2022-11-07 10:43:25 | AdsListParser: read page 72\n",
-      "[INFO    ] 2022-11-07 10:43:26 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-11-07 10:43:26 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "3572\n",
-      "CPU times: user 14.9 s, sys: 1.36 s, total: 16.3 s\n",
-      "Wall time: 5min 52s\n"
+      "[INFO    ] 2022-11-15 13:06:53 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-11-15 13:06:53 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-11-15 13:06:55 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-11-15 13:06:55 | AvitoParser: init\n",
+      "[INFO    ] 2022-11-15 13:07:00 | AvitoParser: 72 pages for read\n",
+      "[INFO    ] 2022-11-15 13:07:00 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-11-15 13:07:02 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-11-15 13:07:05 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-11-15 13:07:08 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-11-15 13:07:12 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-11-15 13:07:16 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-11-15 13:07:21 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-11-15 13:07:25 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-11-15 13:07:27 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-11-15 13:07:30 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-11-15 13:07:35 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-11-15 13:07:38 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-11-15 13:07:41 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-11-15 13:07:45 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-11-15 13:07:48 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-11-15 13:07:53 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-11-15 13:07:55 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-11-15 13:08:56 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-11-15 13:08:59 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-11-15 13:09:01 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-11-15 13:09:04 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-11-15 13:09:09 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-11-15 13:09:11 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-11-15 13:09:15 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-11-15 13:09:19 | AdsListParser: read page 24\n",
+      "[INFO    ] 2022-11-15 13:09:22 | AdsListParser: read page 25\n",
+      "[INFO    ] 2022-11-15 13:09:25 | AdsListParser: read page 26\n",
+      "[INFO    ] 2022-11-15 13:09:45 | AdsListParser: read page 27\n",
+      "[INFO    ] 2022-11-15 13:09:48 | AdsListParser: read page 28\n",
+      "[INFO    ] 2022-11-15 13:09:53 | AdsListParser: read page 29\n",
+      "[INFO    ] 2022-11-15 13:09:56 | AdsListParser: read page 30\n",
+      "[INFO    ] 2022-11-15 13:09:59 | AdsListParser: read page 31\n",
+      "[INFO    ] 2022-11-15 13:10:05 | AdsListParser: read page 32\n",
+      "[INFO    ] 2022-11-15 13:10:08 | AdsListParser: read page 33\n",
+      "[INFO    ] 2022-11-15 13:10:14 | AdsListParser: read page 34\n",
+      "[INFO    ] 2022-11-15 13:10:17 | AdsListParser: read page 35\n",
+      "[INFO    ] 2022-11-15 13:10:20 | AdsListParser: read page 36\n",
+      "[INFO    ] 2022-11-15 13:10:23 | AdsListParser: read page 37\n",
+      "[INFO    ] 2022-11-15 13:10:28 | AdsListParser: read page 38\n",
+      "[INFO    ] 2022-11-15 13:10:30 | AdsListParser: read page 39\n",
+      "[INFO    ] 2022-11-15 13:10:33 | AdsListParser: read page 40\n",
+      "[INFO    ] 2022-11-15 13:10:37 | AdsListParser: read page 41\n",
+      "[INFO    ] 2022-11-15 13:10:39 | AdsListParser: read page 42\n",
+      "[INFO    ] 2022-11-15 13:10:42 | AdsListParser: read page 43\n",
+      "[INFO    ] 2022-11-15 13:10:46 | AdsListParser: read page 44\n",
+      "[INFO    ] 2022-11-15 13:10:55 | AdsListParser: read page 45\n",
+      "[INFO    ] 2022-11-15 13:11:00 | AdsListParser: read page 46\n",
+      "[INFO    ] 2022-11-15 13:11:02 | AdsListParser: read page 47\n",
+      "[INFO    ] 2022-11-15 13:11:05 | AdsListParser: read page 48\n",
+      "[INFO    ] 2022-11-15 13:11:10 | AdsListParser: read page 49\n",
+      "[INFO    ] 2022-11-15 13:11:12 | AdsListParser: read page 50\n",
+      "[INFO    ] 2022-11-15 13:11:17 | AdsListParser: read page 51\n",
+      "[INFO    ] 2022-11-15 13:11:20 | AdsListParser: read page 52\n",
+      "[INFO    ] 2022-11-15 13:11:22 | AdsListParser: read page 53\n",
+      "[INFO    ] 2022-11-15 13:11:24 | AdsListParser: read page 54\n",
+      "[INFO    ] 2022-11-15 13:11:26 | AdsListParser: read page 55\n",
+      "[INFO    ] 2022-11-15 13:11:32 | AdsListParser: read page 56\n",
+      "[INFO    ] 2022-11-15 13:11:34 | AdsListParser: read page 57\n",
+      "[INFO    ] 2022-11-15 13:11:37 | AdsListParser: read page 58\n",
+      "[INFO    ] 2022-11-15 13:11:39 | AdsListParser: read page 59\n",
+      "[INFO    ] 2022-11-15 13:11:45 | AdsListParser: read page 60\n",
+      "[INFO    ] 2022-11-15 13:11:47 | AdsListParser: read page 61\n",
+      "[INFO    ] 2022-11-15 13:11:52 | AdsListParser: read page 62\n",
+      "[INFO    ] 2022-11-15 13:11:56 | AdsListParser: read page 63\n",
+      "[INFO    ] 2022-11-15 13:12:01 | AdsListParser: read page 64\n",
+      "[INFO    ] 2022-11-15 13:12:05 | AdsListParser: read page 65\n",
+      "[INFO    ] 2022-11-15 13:12:08 | AdsListParser: read page 66\n",
+      "[INFO    ] 2022-11-15 13:12:11 | AdsListParser: read page 67\n",
+      "[INFO    ] 2022-11-15 13:12:17 | AdsListParser: read page 68\n",
+      "[INFO    ] 2022-11-15 13:12:19 | AdsListParser: read page 69\n",
+      "[INFO    ] 2022-11-15 13:12:21 | AdsListParser: read page 70\n",
+      "[INFO    ] 2022-11-15 13:12:24 | AdsListParser: read page 71\n",
+      "[INFO    ] 2022-11-15 13:12:30 | AdsListParser: read page 72\n",
+      "[INFO    ] 2022-11-15 13:12:30 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-11-15 13:12:31 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "3579\n",
+      "CPU times: user 15.6 s, sys: 833 ms, total: 16.4 s\n",
+      "Wall time: 5min 37s\n"
      ]
     }
    ],
@@ -226,8 +226,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3572\n",
-      "3257\n"
+      "3579\n",
+      "3218\n"
      ]
     }
    ],
@@ -299,27 +299,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2897</th>\n",
-       "      <td>2568500563</td>\n",
-       "      <td>Объявление «2-к. квартира, 51,9 м², 3/5 эт.» 11 фотографий</td>\n",
-       "      <td>8000000</td>\n",
+       "      <th>2518</th>\n",
+       "      <td>2425338071</td>\n",
+       "      <td>Объявление «2-к. квартира, 57 м², 2/10 эт.» 40 фотографий</td>\n",
+       "      <td>6800000</td>\n",
        "      <td></td>\n",
-       "      <td>ул. Репина, 18</td>\n",
-       "      <td>Объект №2054. \\n\\nХотите жить в самом сердце перспективного района с шаговой доступностью ко всей необходимой инфраструктуре для комфортной жизни? \\n\\nТогда трехкомнатная крупногабаритная квартира на Репина — для Вас! \\n\\nОсобенности Вашей новой квартиры: \\n— Кос</td>\n",
-       "      <td>64</td>\n",
-       "      <td>2022-11-07 10:43:26.010265</td>\n",
+       "      <td>ул. Горпищенко, 127к1</td>\n",
+       "      <td>Двухкомнатная квартира 57 м2, на 2/10 этаже дома с просторной кухней 10,7 м2. Расположена в г. Севастополь, Нахимовский район, ул. Горпищенко, д. 127 к. 1. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nТехнические характеристики: \\n— Адрес: г. Севастополь, На</td>\n",
+       "      <td>57</td>\n",
+       "      <td>2022-11-15 13:12:30.595599</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>712</th>\n",
-       "      <td>2333405776</td>\n",
-       "      <td>Объявление «1-к. квартира, 31 м², 1/5 эт.» 11 фотографий</td>\n",
-       "      <td>4500000</td>\n",
+       "      <th>235</th>\n",
+       "      <td>2601331878</td>\n",
+       "      <td>Объявление «1-к. квартира, 38 м², 3/5 эт.» 17 фотографий</td>\n",
+       "      <td>3800000</td>\n",
        "      <td></td>\n",
-       "      <td>ул. Горпищенко, 43</td>\n",
-       "      <td>Продам однокомнатную квартиру на первом этаже. Хорошее жилое состояние. Без балкона. Отличная инфраструктура. Прямая продажа. Торг.</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2022-11-07 10:43:26.010265</td>\n",
+       "      <td>ул. Колобова, 22</td>\n",
+       "      <td>Срочная Продажа! Продам небольшую двушку в одном из самых востребованных районе города. Квартира находится непосредственно на территории части Мчс, что несомненно дает вам преимущество(бесплатная охраняемая парковка, круглосуточная охрана части). В квартир</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022-11-15 13:12:30.595599</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -327,21 +327,21 @@
        "</div>"
       ],
       "text/plain": [
-       "        avito_id                                                       title  \\\n",
-       "2897  2568500563  Объявление «2-к. квартира, 51,9 м², 3/5 эт.» 11 фотографий   \n",
-       "712   2333405776    Объявление «1-к. квартира, 31 м², 1/5 эт.» 11 фотографий   \n",
+       "        avito_id                                                      title  \\\n",
+       "2518  2425338071  Объявление «2-к. квартира, 57 м², 2/10 эт.» 40 фотографий   \n",
+       "235   2601331878   Объявление «1-к. квартира, 38 м², 3/5 эт.» 17 фотографий   \n",
        "\n",
-       "        price obj_name                 adr  \\\n",
-       "2897  8000000               ул. Репина, 18   \n",
-       "712   4500000           ул. Горпищенко, 43   \n",
+       "        price obj_name                    adr  \\\n",
+       "2518  6800000           ул. Горпищенко, 127к1   \n",
+       "235   3800000                ул. Колобова, 22   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                  description  \\\n",
-       "2897  Объект №2054. \\n\\nХотите жить в самом сердце перспективного района с шаговой доступностью ко всей необходимой инфраструктуре для комфортной жизни? \\n\\nТогда трехкомнатная крупногабаритная квартира на Репина — для Вас! \\n\\nОсобенности Вашей новой квартиры: \\n— Кос   \n",
-       "712                                                                                                                                       Продам однокомнатную квартиру на первом этаже. Хорошее жилое состояние. Без балкона. Отличная инфраструктура. Прямая продажа. Торг.   \n",
+       "                                                                                                                                                                                                                                                                description  \\\n",
+       "2518  Двухкомнатная квартира 57 м2, на 2/10 этаже дома с просторной кухней 10,7 м2. Расположена в г. Севастополь, Нахимовский район, ул. Горпищенко, д. 127 к. 1. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nТехнические характеристики: \\n— Адрес: г. Севастополь, На   \n",
+       "235        Срочная Продажа! Продам небольшую двушку в одном из самых востребованных районе города. Квартира находится непосредственно на территории части Мчс, что несомненно дает вам преимущество(бесплатная охраняемая парковка, круглосуточная охрана части). В квартир   \n",
        "\n",
        "      page                         ts       place  \n",
-       "2897    64 2022-11-07 10:43:26.010265  sevastopol  \n",
-       "712     16 2022-11-07 10:43:26.010265  sevastopol  "
+       "2518    57 2022-11-15 13:12:30.595599  sevastopol  \n",
+       "235      5 2022-11-15 13:12:30.595599  sevastopol  "
       ]
      },
      "execution_count": 10,
