--- a/01a-avito-downloader-flat.ipynb
+++ b/01a-avito-downloader-flat.ipynb
@@ -116,89 +116,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-11-15 13:06:53 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-11-15 13:06:53 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-11-15 13:06:55 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-11-15 13:06:55 | AvitoParser: init\n",
-      "[INFO    ] 2022-11-15 13:07:00 | AvitoParser: 72 pages for read\n",
-      "[INFO    ] 2022-11-15 13:07:00 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-11-15 13:07:02 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-11-15 13:07:05 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-11-15 13:07:08 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-11-15 13:07:12 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-11-15 13:07:16 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-11-15 13:07:21 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-11-15 13:07:25 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-11-15 13:07:27 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-11-15 13:07:30 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-11-15 13:07:35 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-11-15 13:07:38 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-11-15 13:07:41 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-11-15 13:07:45 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-11-15 13:07:48 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-11-15 13:07:53 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-11-15 13:07:55 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-11-15 13:08:56 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-11-15 13:08:59 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-11-15 13:09:01 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-11-15 13:09:04 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-11-15 13:09:09 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-11-15 13:09:11 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-11-15 13:09:15 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-11-15 13:09:19 | AdsListParser: read page 24\n",
-      "[INFO    ] 2022-11-15 13:09:22 | AdsListParser: read page 25\n",
-      "[INFO    ] 2022-11-15 13:09:25 | AdsListParser: read page 26\n",
-      "[INFO    ] 2022-11-15 13:09:45 | AdsListParser: read page 27\n",
-      "[INFO    ] 2022-11-15 13:09:48 | AdsListParser: read page 28\n",
-      "[INFO    ] 2022-11-15 13:09:53 | AdsListParser: read page 29\n",
-      "[INFO    ] 2022-11-15 13:09:56 | AdsListParser: read page 30\n",
-      "[INFO    ] 2022-11-15 13:09:59 | AdsListParser: read page 31\n",
-      "[INFO    ] 2022-11-15 13:10:05 | AdsListParser: read page 32\n",
-      "[INFO    ] 2022-11-15 13:10:08 | AdsListParser: read page 33\n",
-      "[INFO    ] 2022-11-15 13:10:14 | AdsListParser: read page 34\n",
-      "[INFO    ] 2022-11-15 13:10:17 | AdsListParser: read page 35\n",
-      "[INFO    ] 2022-11-15 13:10:20 | AdsListParser: read page 36\n",
-      "[INFO    ] 2022-11-15 13:10:23 | AdsListParser: read page 37\n",
-      "[INFO    ] 2022-11-15 13:10:28 | AdsListParser: read page 38\n",
-      "[INFO    ] 2022-11-15 13:10:30 | AdsListParser: read page 39\n",
-      "[INFO    ] 2022-11-15 13:10:33 | AdsListParser: read page 40\n",
-      "[INFO    ] 2022-11-15 13:10:37 | AdsListParser: read page 41\n",
-      "[INFO    ] 2022-11-15 13:10:39 | AdsListParser: read page 42\n",
-      "[INFO    ] 2022-11-15 13:10:42 | AdsListParser: read page 43\n",
-      "[INFO    ] 2022-11-15 13:10:46 | AdsListParser: read page 44\n",
-      "[INFO    ] 2022-11-15 13:10:55 | AdsListParser: read page 45\n",
-      "[INFO    ] 2022-11-15 13:11:00 | AdsListParser: read page 46\n",
-      "[INFO    ] 2022-11-15 13:11:02 | AdsListParser: read page 47\n",
-      "[INFO    ] 2022-11-15 13:11:05 | AdsListParser: read page 48\n",
-      "[INFO    ] 2022-11-15 13:11:10 | AdsListParser: read page 49\n",
-      "[INFO    ] 2022-11-15 13:11:12 | AdsListParser: read page 50\n",
-      "[INFO    ] 2022-11-15 13:11:17 | AdsListParser: read page 51\n",
-      "[INFO    ] 2022-11-15 13:11:20 | AdsListParser: read page 52\n",
-      "[INFO    ] 2022-11-15 13:11:22 | AdsListParser: read page 53\n",
-      "[INFO    ] 2022-11-15 13:11:24 | AdsListParser: read page 54\n",
-      "[INFO    ] 2022-11-15 13:11:26 | AdsListParser: read page 55\n",
-      "[INFO    ] 2022-11-15 13:11:32 | AdsListParser: read page 56\n",
-      "[INFO    ] 2022-11-15 13:11:34 | AdsListParser: read page 57\n",
-      "[INFO    ] 2022-11-15 13:11:37 | AdsListParser: read page 58\n",
-      "[INFO    ] 2022-11-15 13:11:39 | AdsListParser: read page 59\n",
-      "[INFO    ] 2022-11-15 13:11:45 | AdsListParser: read page 60\n",
-      "[INFO    ] 2022-11-15 13:11:47 | AdsListParser: read page 61\n",
-      "[INFO    ] 2022-11-15 13:11:52 | AdsListParser: read page 62\n",
-      "[INFO    ] 2022-11-15 13:11:56 | AdsListParser: read page 63\n",
-      "[INFO    ] 2022-11-15 13:12:01 | AdsListParser: read page 64\n",
-      "[INFO    ] 2022-11-15 13:12:05 | AdsListParser: read page 65\n",
-      "[INFO    ] 2022-11-15 13:12:08 | AdsListParser: read page 66\n",
-      "[INFO    ] 2022-11-15 13:12:11 | AdsListParser: read page 67\n",
-      "[INFO    ] 2022-11-15 13:12:17 | AdsListParser: read page 68\n",
-      "[INFO    ] 2022-11-15 13:12:19 | AdsListParser: read page 69\n",
-      "[INFO    ] 2022-11-15 13:12:21 | AdsListParser: read page 70\n",
-      "[INFO    ] 2022-11-15 13:12:24 | AdsListParser: read page 71\n",
-      "[INFO    ] 2022-11-15 13:12:30 | AdsListParser: read page 72\n",
-      "[INFO    ] 2022-11-15 13:12:30 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-11-15 13:12:31 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "3579\n",
-      "CPU times: user 15.6 s, sys: 833 ms, total: 16.4 s\n",
-      "Wall time: 5min 37s\n"
+      "[INFO    ] 2022-11-28 13:10:12 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-11-28 13:10:12 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-11-28 13:10:14 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-11-28 13:10:14 | AvitoParser: init\n",
+      "[INFO    ] 2022-11-28 13:10:21 | AvitoParser: 82 pages for read\n",
+      "[INFO    ] 2022-11-28 13:10:21 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-11-28 13:10:23 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-11-28 13:10:26 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-11-28 13:10:28 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-11-28 13:10:31 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-11-28 13:10:34 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-11-28 13:10:37 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-11-28 13:10:39 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-11-28 13:10:42 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-11-28 13:10:44 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-11-28 13:10:47 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-11-28 13:10:51 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-11-28 13:10:53 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-11-28 13:10:56 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-11-28 13:10:59 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-11-28 13:11:01 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-11-28 13:11:03 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-11-28 13:11:06 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-11-28 13:11:11 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-11-28 13:11:13 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-11-28 13:11:16 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-11-28 13:11:18 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-11-28 13:11:22 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-11-28 13:11:24 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-11-28 13:11:27 | AdsListParser: read page 24\n",
+      "[INFO    ] 2022-11-28 13:11:31 | AdsListParser: read page 25\n",
+      "[INFO    ] 2022-11-28 13:11:33 | AdsListParser: read page 26\n",
+      "[INFO    ] 2022-11-28 13:11:37 | AdsListParser: read page 27\n",
+      "[INFO    ] 2022-11-28 13:11:39 | AdsListParser: read page 28\n",
+      "[INFO    ] 2022-11-28 13:11:41 | AdsListParser: read page 29\n",
+      "[INFO    ] 2022-11-28 13:11:44 | AdsListParser: read page 30\n",
+      "[INFO    ] 2022-11-28 13:11:46 | AdsListParser: read page 31\n",
+      "[INFO    ] 2022-11-28 13:11:48 | AdsListParser: read page 32\n",
+      "[INFO    ] 2022-11-28 13:11:50 | AdsListParser: read page 33\n",
+      "[INFO    ] 2022-11-28 13:11:52 | AdsListParser: read page 34\n",
+      "[INFO    ] 2022-11-28 13:11:55 | AdsListParser: read page 35\n",
+      "[ERROR   ] 2022-11-28 13:16:55 | Message: TimedPromise timed out after 300000 ms\n",
+      "Stacktrace:\n",
+      "RemoteError@chrome://remote/content/shared/RemoteError.sys.mjs:8:8\n",
+      "WebDriverError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:182:5\n",
+      "TimeoutError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:471:5\n",
+      "bail@chrome://remote/content/marionette/sync.sys.mjs:212:19\n",
+      "\n",
+      "[INFO    ] 2022-11-28 13:16:55 | AdsListParser: read page 36\n",
+      "[INFO    ] 2022-11-28 13:16:57 | AdsListParser: read page 37\n",
+      "[INFO    ] 2022-11-28 13:17:00 | AdsListParser: read page 38\n",
+      "[INFO    ] 2022-11-28 13:17:03 | AdsListParser: read page 39\n",
+      "[INFO    ] 2022-11-28 13:17:09 | AdsListParser: read page 40\n",
+      "[INFO    ] 2022-11-28 13:17:12 | AdsListParser: read page 41\n",
+      "[INFO    ] 2022-11-28 13:17:16 | AdsListParser: read page 42\n",
+      "[INFO    ] 2022-11-28 13:17:19 | AdsListParser: read page 43\n",
+      "[INFO    ] 2022-11-28 13:17:21 | AdsListParser: read page 44\n",
+      "[INFO    ] 2022-11-28 13:17:24 | AdsListParser: read page 45\n",
+      "[INFO    ] 2022-11-28 13:17:27 | AdsListParser: read page 46\n",
+      "[INFO    ] 2022-11-28 13:17:30 | AdsListParser: read page 47\n",
+      "[INFO    ] 2022-11-28 13:17:34 | AdsListParser: read page 48\n",
+      "[INFO    ] 2022-11-28 13:17:37 | AdsListParser: read page 49\n",
+      "[INFO    ] 2022-11-28 13:17:40 | AdsListParser: read page 50\n",
+      "[INFO    ] 2022-11-28 13:17:42 | AdsListParser: read page 51\n",
+      "[INFO    ] 2022-11-28 13:17:45 | AdsListParser: read page 52\n",
+      "[INFO    ] 2022-11-28 13:17:48 | AdsListParser: read page 53\n",
+      "[INFO    ] 2022-11-28 13:17:50 | AdsListParser: read page 54\n",
+      "[INFO    ] 2022-11-28 13:17:52 | AdsListParser: read page 55\n",
+      "[INFO    ] 2022-11-28 13:17:55 | AdsListParser: read page 56\n",
+      "[INFO    ] 2022-11-28 13:17:58 | AdsListParser: read page 57\n",
+      "[INFO    ] 2022-11-28 13:18:02 | AdsListParser: read page 58\n",
+      "[INFO    ] 2022-11-28 13:18:06 | AdsListParser: read page 59\n",
+      "[INFO    ] 2022-11-28 13:18:09 | AdsListParser: read page 60\n",
+      "[INFO    ] 2022-11-28 13:18:12 | AdsListParser: read page 61\n",
+      "[INFO    ] 2022-11-28 13:18:15 | AdsListParser: read page 62\n",
+      "[INFO    ] 2022-11-28 13:18:17 | AdsListParser: read page 63\n",
+      "[INFO    ] 2022-11-28 13:18:20 | AdsListParser: read page 64\n",
+      "[INFO    ] 2022-11-28 13:18:24 | AdsListParser: read page 65\n",
+      "[INFO    ] 2022-11-28 13:18:28 | AdsListParser: read page 66\n",
+      "[INFO    ] 2022-11-28 13:18:31 | AdsListParser: read page 67\n",
+      "[INFO    ] 2022-11-28 13:18:33 | AdsListParser: read page 68\n",
+      "[INFO    ] 2022-11-28 13:18:36 | AdsListParser: read page 69\n",
+      "[INFO    ] 2022-11-28 13:18:38 | AdsListParser: read page 70\n",
+      "[INFO    ] 2022-11-28 13:18:40 | AdsListParser: read page 71\n",
+      "[INFO    ] 2022-11-28 13:20:02 | AdsListParser: read page 72\n",
+      "[INFO    ] 2022-11-28 13:20:05 | AdsListParser: read page 73\n",
+      "[INFO    ] 2022-11-28 13:20:07 | AdsListParser: read page 74\n",
+      "[INFO    ] 2022-11-28 13:20:10 | AdsListParser: read page 75\n",
+      "[INFO    ] 2022-11-28 13:20:13 | AdsListParser: read page 76\n",
+      "[INFO    ] 2022-11-28 13:20:16 | AdsListParser: read page 77\n",
+      "[INFO    ] 2022-11-28 13:20:17 | AdsListParser: read page 78\n",
+      "[INFO    ] 2022-11-28 13:20:19 | AdsListParser: read page 79\n",
+      "[INFO    ] 2022-11-28 13:20:24 | AdsListParser: read page 80\n",
+      "[INFO    ] 2022-11-28 13:20:26 | AdsListParser: read page 81\n",
+      "[INFO    ] 2022-11-28 13:20:28 | AdsListParser: read page 82\n",
+      "[INFO    ] 2022-11-28 13:20:28 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-11-28 13:20:29 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "3943\n",
+      "CPU times: user 17.2 s, sys: 694 ms, total: 17.9 s\n",
+      "Wall time: 10min 16s\n"
      ]
     }
    ],
@@ -226,8 +243,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3579\n",
-      "3218\n"
+      "3943\n",
+      "3596\n"
      ]
     }
    ],
@@ -299,27 +316,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2518</th>\n",
-       "      <td>2425338071</td>\n",
-       "      <td>Объявление «2-к. квартира, 57 м², 2/10 эт.» 40 фотографий</td>\n",
-       "      <td>6800000</td>\n",
+       "      <th>118</th>\n",
+       "      <td>2569582595</td>\n",
+       "      <td>Объявление «3-к. квартира, 61,3 м², 9/9 эт.» 21 фотография</td>\n",
+       "      <td>6500000</td>\n",
        "      <td></td>\n",
-       "      <td>ул. Горпищенко, 127к1</td>\n",
-       "      <td>Двухкомнатная квартира 57 м2, на 2/10 этаже дома с просторной кухней 10,7 м2. Расположена в г. Севастополь, Нахимовский район, ул. Горпищенко, д. 127 к. 1. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nТехнические характеристики: \\n— Адрес: г. Севастополь, На</td>\n",
-       "      <td>57</td>\n",
-       "      <td>2022-11-15 13:12:30.595599</td>\n",
+       "      <td>пр-т Октябрьской Революции, 52А</td>\n",
+       "      <td>Срочно! \\n\\nПродается просторная благоустроенная трёхкомнатная квартира в Гагаринском районе г. Севастополя на пр-те Октябрьской революции. \\n\\nСостояние очень хорошее, жилое. Квартира видовая, солнечная. Все комнаты раздельные. Две просторные застекленные лод</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022-11-28 13:20:28.619982</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>235</th>\n",
-       "      <td>2601331878</td>\n",
-       "      <td>Объявление «1-к. квартира, 38 м², 3/5 эт.» 17 фотографий</td>\n",
-       "      <td>3800000</td>\n",
+       "      <th>1451</th>\n",
+       "      <td>2538905346</td>\n",
+       "      <td>Объявление «1-к. квартира, 18 м², 1/3 эт.» 12 фотографий</td>\n",
+       "      <td>2450000</td>\n",
        "      <td></td>\n",
-       "      <td>ул. Колобова, 22</td>\n",
-       "      <td>Срочная Продажа! Продам небольшую двушку в одном из самых востребованных районе города. Квартира находится непосредственно на территории части Мчс, что несомненно дает вам преимущество(бесплатная охраняемая парковка, круглосуточная охрана части). В квартир</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2022-11-15 13:12:30.595599</td>\n",
+       "      <td>ул. Военных Строителей, 3Б/4</td>\n",
+       "      <td>Продается студия 18 м² Гагаринский район. Ул. Военных строителей 3Б/5.\\nСвет вода газ тепло интернет Есть. На всё свои счётчики. Дом сдан! Ижс.\\nОбщая площадь 18 м² Высота потолков 3м. Море школы детские сады магазины Рядом. Можно сразу прописаться. Соседи у</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2022-11-28 13:20:28.619982</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -327,21 +344,21 @@
        "</div>"
       ],
       "text/plain": [
-       "        avito_id                                                      title  \\\n",
-       "2518  2425338071  Объявление «2-к. квартира, 57 м², 2/10 эт.» 40 фотографий   \n",
-       "235   2601331878   Объявление «1-к. квартира, 38 м², 3/5 эт.» 17 фотографий   \n",
+       "        avito_id                                                       title  \\\n",
+       "118   2569582595  Объявление «3-к. квартира, 61,3 м², 9/9 эт.» 21 фотография   \n",
+       "1451  2538905346    Объявление «1-к. квартира, 18 м², 1/3 эт.» 12 фотографий   \n",
        "\n",
-       "        price obj_name                    adr  \\\n",
-       "2518  6800000           ул. Горпищенко, 127к1   \n",
-       "235   3800000                ул. Колобова, 22   \n",
+       "        price obj_name                              adr  \\\n",
+       "118   6500000           пр-т Октябрьской Революции, 52А   \n",
+       "1451  2450000              ул. Военных Строителей, 3Б/4   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                description  \\\n",
-       "2518  Двухкомнатная квартира 57 м2, на 2/10 этаже дома с просторной кухней 10,7 м2. Расположена в г. Севастополь, Нахимовский район, ул. Горпищенко, д. 127 к. 1. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nТехнические характеристики: \\n— Адрес: г. Севастополь, На   \n",
-       "235        Срочная Продажа! Продам небольшую двушку в одном из самых востребованных районе города. Квартира находится непосредственно на территории части Мчс, что несомненно дает вам преимущество(бесплатная охраняемая парковка, круглосуточная охрана части). В квартир   \n",
+       "                                                                                                                                                                                                                                                               description  \\\n",
+       "118   Срочно! \\n\\nПродается просторная благоустроенная трёхкомнатная квартира в Гагаринском районе г. Севастополя на пр-те Октябрьской революции. \\n\\nСостояние очень хорошее, жилое. Квартира видовая, солнечная. Все комнаты раздельные. Две просторные застекленные лод   \n",
+       "1451    Продается студия 18 м² Гагаринский район. Ул. Военных строителей 3Б/5.\\nСвет вода газ тепло интернет Есть. На всё свои счётчики. Дом сдан! Ижс.\\nОбщая площадь 18 м² Высота потолков 3м. Море школы детские сады магазины Рядом. Можно сразу прописаться. Соседи у   \n",
        "\n",
        "      page                         ts       place  \n",
-       "2518    57 2022-11-15 13:12:30.595599  sevastopol  \n",
-       "235      5 2022-11-15 13:12:30.595599  sevastopol  "
+       "118      3 2022-11-28 13:20:28.619982  sevastopol  \n",
+       "1451    32 2022-11-28 13:20:28.619982  sevastopol  "
       ]
      },
      "execution_count": 10,
