--- a/01-avito-downloader.ipynb
+++ b/01-avito-downloader.ipynb
@@ -164,6 +164,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6520cd59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dest_folder = 'data/2024/raw'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "8872059a",
    "metadata": {
@@ -697,7 +707,7 @@
     "\n",
     "    display( len(df) )\n",
     "    t_now = datetime.now().strftime('%Y-%m-%d_%H-%M')\n",
-    "    fname = f'data/raw/{subfolder}/avito/avito_{t_now}_raw_{place}.pkl'\n",
+    "    fname = f'{dest_folder}/{subfolder}/avito/avito_{t_now}_raw_{place}.pkl'\n",
     "    df.to_pickle(fname)\n",
     "    display( fname )\n",
     "\n",
