--- a/02-cian-downloader.ipynb
+++ b/02-cian-downloader.ipynb
@@ -149,6 +149,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "809e913f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dest_folder = 'data/2024/raw'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "3475a18d",
    "metadata": {},
@@ -506,7 +516,7 @@
     "    \n",
     "    display( len(df) )\n",
     "    t_now = datetime.now().strftime('%Y-%m-%d_%H-%M')\n",
-    "    fname = f'data/raw/{subfolder}/cian/cian_{t_now}_raw_{place}.pkl'\n",
+    "    fname = f'{dest_folder}/{subfolder}/cian/cian_{t_now}_raw_{place}.pkl'\n",
     "    df.to_pickle(fname)\n",
     "    display( fname )\n",
     "       \n",
